--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,26 +9,33 @@ a{
 }
 
 div.nome i{
-	opacity: 0.5;
+	opacity: 1;
 
 }
 div.nome i:hover {	
   opacity: 1;
+  transform: scale(1.5);
 }
 
 div.nome h1{
 	text-align: center;
 }
 
-div.nome h3, h5{
+div.nome h3,h5{
 	color:gray;
 	text-align: center;
 }
 
-.github{
-	background-image: url('../imagens/github.png');
+div.secundario a{
+	text-decoration: none;
+	color: white;
+
 }
 
+div.secundario a:hover{
+	text-decoration: none;
+	color: gray;
+}
 
 .avatar{
 	vertical-align: middle;
@@ -36,7 +43,7 @@ div.nome h3, h5{
 	height: 200px;
 	border-radius: 50%;
 	margin-top: 40px;
-	margin-left: 80px;	
+	margin-left: 150px;	
 }
 
 .perfil{
@@ -68,6 +75,20 @@ div.nome h3, h5{
 	border-radius: 10px;
 }
 
+.secundario{
+	padding-top:20px;
+	padding-right:0px;
+	padding-bottom:20px;
+	padding-left:10px;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 20px;
+	margin-left: 0px;	
+	background-color: #443737;
+	box-shadow: 0px 0px 3px 3px #000000;
+	border-radius: 10px;
+}
+
 .listas{
 	padding: 5px;
 	margin-top: 0px;
@@ -76,11 +97,28 @@ div.nome h3, h5{
 	margin-left: 10px;	
 }
 
+.skills {
+  text-align: right;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: white;
+}
+
+.c {width: 85%; background-color: #4CAF50;}
+.html {width: 70%; background-color: #4CAF50;}
+.python {width: 60%; background-color: #4CAF50;}
+
+
+
+
+
 #principal{
 	/*background-color: #272121;*/
 	background-color: #CCC;
 	padding: 0px;
 	margin: 0px;
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+
 }
 
 #cabecalho{
@@ -99,17 +137,17 @@ div.nome h3, h5{
 
 	float: left;
 	margin: 20px 20px 20px 100px;
-	width: 60%;
+	width: 55%;
 }
 
 #right{
 
 	float: left;
 	margin: 20px;
-	width: 20%;
-	background-color: red;
+	width: 25%;
 }
 
 #rodape{
 	background-color: black;
+	text-align: center;
 }
